# CRA-AuditFlow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: ci.yml
data/: cra_categories.toml
examples/: demo-report.md  demo-sbom.json
src/: cvss.rs  lib.rs  main.rs
src/classifier/: cra.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/models/: assessment.rs  component.rs  mod.rs  vulnerability.rs
src/report/: markdown.rs  mod.rs  plaintext.rs
src/sbom/: cyclonedx.rs  mod.rs  spdx.rs
src/vuln/: db.rs  matcher.rs  mod.rs  osv.rs
test-sboms/: romy-cv-report-fixed.md  tahini-report.md
tests/: test_audit_pipeline.rs  test_classifier.rs  test_cli.rs  test_sbom_parsing.rs
tests/fixtures/: cyclonedx_minimal.json  spdx_minimal.json
