[package]
name = "cra-auditflow"
version = "0.1.0"
edition = "2021"
description = "CRA compliance pipeline: Ingest SBOM, check vulnerabilities, classify risk, generate report"
license = "Apache-2.0"
repository = "https://github.com/mlodzik/CRA-AuditFlow"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
packageurl = "0.4"
directories = "5"
semver = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
